--- a/src/components/showcase/languages/css/css.module.scss
+++ b/src/components/showcase/languages/css/css.module.scss
@@ -10,6 +10,8 @@
   margin: 0;
   min-height: 300px;
   padding: 6px;
+  position: relative;
+  z-index: 1;
 
   @media screen and (min-min-width: 720px) {
     padding: 15px;
